# rustdev-tasks

./: Cargo.toml  README.md  rustdev-tasks.code-workspace
async-smarthome2/: Cargo.toml
async-smarthome2/examples/: async_greeting_client.rs  async_greeting_server.rs  async_remotesocket_client.rs  async_smartsocket_server.rs  async_sweet_home.rs  async_thermodevice.rs  async_thermoimitator.rs
async-smarthome2/src/: error.rs  house.rs  room.rs
async-smarthome2/src/control/: client.rs  message.rs  server.rs
async-smarthome2/src/control/protocol/: client.rs  consts.rs  mod.rs  server.rs
async-smarthome2/src/device/: mod.rs  socket.rs  thermometer.rs
async-smarthome2/tests/: async_smarthome2_tests.rs
bytes-wrappers/: Cargo.toml
bytes-wrappers/examples/: wrapstr.rs
py-smartsocket/: Cargo.toml  README.md  pyproject.toml  requirements-dev.txt
smarthome/: Cargo.toml
smarthome/src/: lib.rs  (+4 more)
smarthome2/: Cargo.toml
smarthome2/examples/: greeting_client.rs  greeting_server.rs  remotesocket_client.rs  smartsocket_server.rs  sweet_home.rs  thermodevice.rs  thermoimitator.rs
smarthome2/src/: error.rs  house.rs  lib.rs  room.rs
smarthome2/src/control/: client.rs  message.rs  mod.rs  server.rs
smarthome2/src/control/protocol/: client.rs  consts.rs  mod.rs  server.rs
smarthome2/src/device/: mod.rs  socket.rs  thermometer.rs
smarthome2/src/protocol/: client.rs  consts.rs  mod.rs  server.rs
smarthome2/tests/: smarthome2_tests.rs
smartsocket-gui/: Cargo.toml
smartsocket-gui/src/: application.rs  config.rs  error.rs  lib.rs  main.rs
web-smarthome2/: Cargo.toml
web-smarthome2/examples/: web-smarthome2-client.rs
web-smarthome2/src/: config.rs  error.rs  lib.rs  main.rs
web-smarthome2/src/db/: mod.rs  schema.rs
web-smarthome2/src/db/model/: device.rs  house.rs  mod.rs  room.rs  thermometer.rs
web-smarthome2/src/routes/: devices.rs  mod.rs  room.rs  rooms.rs  thermometer.rs
xml-builder/: Cargo.toml
(+11 files in other folders)
