[package]
name = "smarthome2"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = {version = "^1"}
log = {version = "^0.4"}
rand = {version = "^0.8"}
serde = {version = "^1", features = ["derive"]}
statrs = {version = "^0.16"}
thiserror = {version = "^1"}
uuid = {version = "^1", features = ["v4", "fast-rng", "serde"]}

[dev-dependencies]
ctrlc = "^3"
env_logger = "^0.9"
