[package]
name = "web-smarthome2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4"
anyhow = "^1.0"
directories = "^4"
futures = "^0.3"
rand = "^0.8"
serde = {version = "^1", features = ["derive"]}
sqlx = {version = "^0.6", features = ["sqlite", "runtime-actix-native-tls", "uuid"]}
statrs = "^0.16"
thiserror = "^1.0"
toml = "^0.5"
url = "^2.2"
uuid = {version = "^1", features = ["v4", "fast-rng", "serde"]}

[dev-dependencies]
reqwest = {version = "^0.11", features = ["json"]}
serde_json = "^1"
